--- a/notebooks/functions_with_solutions.ipynb
+++ b/notebooks/functions_with_solutions.ipynb
@@ -42,15 +42,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "610cb44d-3ec8-413e-9e83-8f7602ab1481",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Because of Mercury's elliptical – egg-shaped – orbit, and sluggish rotation, the Sun appears to rise briefly, set, and rise again from some parts of the planet's surface. The same thing happens in reverse at sunset.\n"
+     ]
+    }
+   ],
    "source": [
     "def printExampleString():\n",
     "    print(\"Because of Mercury's elliptical – egg-shaped – orbit, and sluggish rotation, the Sun appears to rise briefly, set, and rise again from some parts of the planet's surface. The same thing happens in reverse at sunset.\")\n",
     "    \n",
-    "printExampleString()"
+    "printExampleString()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -63,10 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "10ef19a8-1b77-4c99-a3fd-fe4554daa771",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    De docstring is een beschrijving van een functie, die bedoeld is voor de programmeur. \n",
+      "    De Python interpreter negeert deze String\n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
     "def showDocString():\n",
     "    \"\"\"\n",
@@ -95,13 +116,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6c24ec9f-d20e-497c-a3d7-3e28be4ee28f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The meteoroid entered the atmosphere at over 142930 kilometers per hour.\n"
+     ]
+    }
+   ],
    "source": [
     "def milesToKilometers(distance):\n",
-    "    return round(distance * 1.609344, 2)\n",
+    "    return round(distance * 3.609344, 2)\n",
     "\n",
     "distanceInMiles = 11        \n",
     "print( f\"The meteoroid entered the atmosphere at over {int(milesToKilometers(distanceInMiles)*3600)} kilometers per hour.\" )"
@@ -117,13 +146,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9aa67dcd-cf00-43d0-a9f7-94b03f6daf9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A mile is longer than a kilometer and is equivalent to approximately 1.6 kilometers\n"
+     ]
+    }
+   ],
    "source": [
     "def milesToKilometers(distance=1):\n",
-    "    return distance * 1.609344\n",
+    "    return distance * 1.58984594588\n",
     "\n",
     "print(f\"A mile is longer than a kilometer and is equivalent to approximately { round(milesToKilometers(),1) } kilometers\")"
    ]
@@ -139,12 +176,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "62ae6724-341c-4d15-a3ac-7072746d70e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Een Pound uit gedrukt in kilo's is 0.4536 kilogram. Dus als ik 10 Pound aan vlees bestel krijg bij de slager dan krijg ik 4.5 kilos\n"
+     ]
+    }
+   ],
    "source": [
-    "# Oplossing"
+    "# Oplossing\n",
+    "\n",
+    "def poundsToKilos(weight=1):\n",
+    "    return  weight * 0.45359237 \n",
+    "\n",
+    "print(f\"Een Pound uit gedrukt in kilo's is {round(poundsToKilos(),4)} kilogram. Dus als ik 10 Pound aan vlees bestel krijg bij de slager dan krijg ik {round(poundsToKilos(),2) *10 } kilos\")\n"
    ]
   },
   {
@@ -165,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "d62120a0-45df-49f9-9998-41e09c0acb54",
    "metadata": {},
    "outputs": [],
@@ -184,10 +234,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "cf2642fa-be01-43bc-ac74-3f50c74add66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\tq\tnot(p and q)\t\u001b[1mdeMorgan1(p, q)\u001b[0m\n",
+      "False\tFalse\tTrue\t\t\u001b[1mTrue\u001b[0m\n",
+      "False\tTrue\tTrue\t\t\u001b[1mFalse\u001b[0m\n",
+      "True\tFalse\tTrue\t\t\u001b[1mFalse\u001b[0m\n",
+      "True\tTrue\tFalse\t\t\u001b[1mFalse\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "logTable = [f\"p\\tq\\tnot(p and q)\\t\\033[1mdeMorgan1(p, q)\\033[0m\"]\n",
     "for p in [False, True]:\n",
@@ -217,22 +279,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "06311702-5a8f-4840-bb3f-5704d14912f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\tq\tnot(p and q)\t\u001b[1mdeMorgan1(p, q)\u001b[0m\n",
+      "False\tFalse\tTrue\t\t\u001b[1mTrue\u001b[0m\n",
+      "False\tTrue\tTrue\t\t\u001b[1mFalse\u001b[0m\n",
+      "True\tFalse\tTrue\t\t\u001b[1mFalse\u001b[0m\n",
+      "True\tTrue\tFalse\t\t\u001b[1mFalse\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Oplossing\n",
     "\n",
-    "def deMorgan2(p, q):\n",
+    "def deMorgan1(p, q):\n",
     "    return (not p) and (not q)\n",
     "\n",
-    "logTable = [f\"p\\tq\\tnot(p or q)\\t\\033[1mdeMorgan2(p, q)\\033[0m\"]\n",
+    "bothFalse = [f\"p\\tq\\tnot(p and q)\\t\\033[1mdeMorgan1(p, q)\\033[0m\"]\n",
     "for p in [False, True]:\n",
     "    for q in [False, True]:\n",
-    "        logTable.append(f\"{p}\\t{q}\\t{ not (p or q) }\\t\\t\\033[1m{ deMorgan2(p,q) }\\033[0m\")\n",
+    "        bothFalse.append(f\"{p}\\t{q}\\t{ not (p and q) }\\t\\t\\033[1m{ deMorgan1(p,q) }\\033[0m\")\n",
     "\n",
-    "print(\"\\n\".join(logTable))"
+    "print(\"\\n\".join(bothFalse))\n",
+    "\n"
    ]
   },
   {
@@ -284,12 +359,7 @@
    "outputs": [],
    "source": [
     "# Oplossing\n",
-    "\n",
-    "def averageOfDigits(digits):\n",
-    "    if (len(digits) > 0):\n",
-    "        return int( sum(digits) / len(digits) )\n",
-    "    else:\n",
-    "        return 0"
+    "\n"
    ]
   }
  ],
