--- a/notebooks/variables/lists_with_solutions.ipynb
+++ b/notebooks/variables/lists_with_solutions.ipynb
@@ -42,21 +42,27 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
-   "execution_count": null,
-=======
-   "execution_count": 2,
->>>>>>> 35f14dd (Opdracht 3 af)
-=======
-   "execution_count": null,
->>>>>>> aa8e58c (Opdracht 3 af)
+   "execution_count": 3,
    "id": "eac2c3b2-52a0-4847-bffc-ad8d2eff0507",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "neptuneInnerMoons = [\"Naiad\", \"Thalassa\", \"Despina\", \"Galatea\", \"Proteus\", \"Hippocamp\", \"Larissa\"]\n",
-    "neptuneOutermoons = [\"Triton\", \"Halimede\", \"Sao\", \"Psamathe\", \"Laomedeia\", \"Neso\", \"Nereid\"]"
+    "neptuneOutermoons = [\"Triton\", \"Halimede\", \"Sao\", \"Psamathe\", \"Laomedeia\", \"Neso\", \"Nereid\"]\n",
+    "len(neptuneOutermoons)"
    ]
   },
   {
@@ -70,37 +76,19 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
    "execution_count": null,
    "id": "b4aec7a1-ca64-4cdd-b498-5d88ea756b2d",
    "metadata": {},
    "outputs": [],
    "source": [
-<<<<<<< HEAD:notebooks/variables/lists_with_solutions.ipynb
     "# Oplossing\n",
-    "\n",
-    "len(neptuneInnerMoons) == len(neptuneOutermoons)"
-=======
-    "# Oplossing\n"
-=======
-   "execution_count": 3,
-=======
-   "execution_count": null,
->>>>>>> aa8e58c (Opdracht 3 af)
-   "id": "b4aec7a1-ca64-4cdd-b498-5d88ea756b2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
     "neptuneInnerMoons = [\"Naiad\", \"Thalassa\", \"Despina\", \"Galatea\", \"Proteus\", \"Hippocamp\", \"Larissa\"]\n",
     "neptuneOutermoons = [\"Triton\", \"Halimede\", \"Sao\", \"Psamathe\", \"Laomedeia\", \"Neso\", \"Nereid\"]\n",
     "\n",
     "# Oplossing\n",
     "\n",
-    "len(neptuneInnerMoons) == len(neptuneOutermoons)\n"
->>>>>>> 35f14dd (Opdracht 3 af)
->>>>>>> 786cc25 (Opdracht 2 af):notebooks/variables/lists.ipynb
+    "len(neptuneInnerMoons) == len(neptuneOutermoons)"
    ]
   },
   {
@@ -113,15 +101,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
    "execution_count": null,
-=======
-   "execution_count": 6,
->>>>>>> 35f14dd (Opdracht 3 af)
-=======
-   "execution_count": null,
->>>>>>> aa8e58c (Opdracht 3 af)
    "id": "aeadd5cd-2193-4581-8d52-9d085211630a",
    "metadata": {},
    "outputs": [],
@@ -167,36 +147,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "174da62c-9843-4c8d-8945-815360e2faed",
+   "metadata": {},
+   "source": [
+    "<h3>Elementen toevoegen</h3>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9249ccbd-fc21-469d-a8b9-769f1fbb9551",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Despina', 'Galatea', 'Halimede', 'Hippocamp', 'Laomedeia', 'Larissa', 'Naiad', 'Nereid', 'Neso', 'Proteus', 'Psamathe', 'Sao', 'Thalassa', 'Triton']\n"
+     ]
+    }
+   ],
    "source": [
-    "neptuneMoons = list(zip(neptuneInnerMoons, neptuneOutermoons))\n",
-    "print(neptuneMoons[0])\n",
-    "type(neptuneMoons)"
+    "neptuneInnerMoons = [\"Naiad\", \"Thalassa\", \"Despina\", \"Galatea\", \"Proteus\", \"Hippocamp\", \"Larissa\"]\n",
+    "neptuneOutermoons = [\"Triton\", \"Halimede\", \"Sao\", \"Psamathe\", \"Laomedeia\", \"Neso\", \"Nereid\"]\n",
+    "len(neptuneOutermoons)\n",
+    "\n",
+    "neptuneMoons = []\n",
+    "\n",
+    "for neptuneOuterMoon in neptuneOutermoons:\n",
+    "    neptuneMoons.append(neptuneOuterMoon)\n",
+    "    \n",
+    "for neptuneInnerMoon in neptuneInnerMoons:\n",
+    "    neptuneMoons.append(neptuneInnerMoon)\n",
+    "\n",
+    "neptuneMoons.sort()    \n",
+    "    \n",
+    "print(neptuneMoons)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08e1807f-de63-441e-80ff-cd2cccd3d947",
+   "metadata": {},
+   "source": [
+    "<h3>Elementen verwijderen</h3>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-<<<<<<< HEAD:notebooks/variables/lists_with_solutions.ipynb
-   "id": "b49facab-981d-4fd6-b982-e8400828fb23",
-=======
-<<<<<<< HEAD
    "id": "17f8296a-fa18-45d1-9948-707f87b1b694",
-=======
-   "id": "b49facab-981d-4fd6-b982-e8400828fb23",
->>>>>>> aa8e58c (Opdracht 3 af)
->>>>>>> 246369a (Opdracht 3 af):notebooks/variables/lists.ipynb
    "metadata": {},
    "outputs": [],
    "source": [
-    "myMatrix = [\n",
-    "    1, 2, 3,\n",
-    "    4, 5, 6,\n",
-    "    ]"
+    "neptuneMoons.remove('Naiad')\n",
+    "print(neptuneMoons)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "329486ba-5092-4eb1-ba2b-693bebeb036c",
+   "metadata": {},
+   "source": [
+    "**Gebruik <i>pop()</i> om het laaste element <u>uit</u> de lijst te halen**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7aaf648-0286-434c-b927-e1364d381d5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "firstNeptuneMoon = neptuneMoons.pop()\n",
+    "print(f\"Popped {firstNeptuneMoon} from neptuneMoons\")\n",
+    "print(f\"{neptuneMoons}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bb73b2b-463b-44cd-a17e-d8c63a52005e",
+   "metadata": {},
+   "source": [
+    "<h3>Excercise 10</h3>\n",
+    "<p>Maak een nieuwe lijst <i>lowerMoons</i> met alle <u>neptuneMoons</u> in <u>lowercase</u>.    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18b8e92f-e0bf-4247-8a45-70fcd1ee48f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "neptuneInnerMoons = [\"Naiad\", \"Thalassa\", \"Despina\", \"Galatea\", \"Proteus\", \"Hippocamp\", \"Larissa\"]\n",
+    "neptuneOuterMoons = [\"Triton\", \"Halimede\", \"Sao\", \"Psamathe\", \"Laomedeia\", \"Neso\", \"Nereid\"]\n",
+    "\n",
+    "neptuneMoons = []\n",
+    "\n",
+    "\n",
+    "for neptuneOuterMoon in neptuneOuterMoons:\n",
+    "    neptuneMoons.append(neptuneOuterMoon)\n",
+    "    \n",
+    "for neptuneInnerMoon in neptuneInnerMoons:\n",
+    "    neptuneMoons.append(neptuneInnerMoon)\n",
+    "\n",
+    "\n",
+    "lowerMoons = map(lambda moon: moon.lower(), neptuneMoons)\n",
+    "\n",
+    "print(list(lowerMoons))\n",
+    "\n"
    ]
   },
   {
@@ -228,14 +290,6 @@
     "neptuneInnerMoonsStr = \", \".join(map(str,sorted(neptuneInnerMoons))) \n",
     "print( f\"In order of increasing distance, the list of { len(neptuneInnerMoons) } regular Neptune moons is {neptuneInnerMoonsStr}.\" )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff5e9179-cb99-4c2b-bd3e-68f6a4205aae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -254,11 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD:notebooks/variables/lists_with_solutions.ipynb
-   "version": "3.8.9"
-=======
-   "version": "3.10.5"
->>>>>>> 786cc25 (Opdracht 2 af):notebooks/variables/lists.ipynb
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
