--- a/notebooks/variables/strings_with_solutions.ipynb
+++ b/notebooks/variables/strings_with_solutions.ipynb
@@ -177,10 +177,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7ad87022-4b2e-4067-9f8f-1a43fad63029",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'star' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m formatStr \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBeing the planet closest to the \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m guards its secrets very carefully\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[43mstar\u001b[49m, planet)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'star' is not defined"
+     ]
+    }
+   ],
    "source": [
     "formatStr = \"Being the planet closest to the {0}, {1} guards its secrets very carefully\".format(star, planet)"
    ]
@@ -195,10 +207,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c1aed156-b5aa-4ed2-a5f6-98c28828314d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'star' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m fStr \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBeing the planet closest to the \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstar\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mplanet\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m guards its secrets very carefully\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'star' is not defined"
+     ]
+    }
+   ],
    "source": [
     "fStr = f\"Being the planet closest to the {star}, {planet} guards its secrets very carefully\""
    ]
@@ -343,10 +367,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9a62d1d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THE NEAR MISSION\n",
+      "dwarf planets\n",
+      "Cosmonaut Alexi Leonov\n",
+      "Cosmonaut Alexi Leonov\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"The NEAR Mission\".upper())\n",
     "print(\"Dwarf Planets\".lower())\n",
@@ -453,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
