dictionaries tussen tijdse opslag

--- a/notebooks/variables/dictionaries.ipynb
+++ b/notebooks/variables/dictionaries.ipynb
@@ -282,25 +282,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "id": "76955594-1a07-4e1a-abff-e77b717a8cf0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmoonlanderSpecsCopy\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 1"
+     ]
     }
    ],
    "source": [
-    "moonlanderSpecs.pop(1)\n",
     "\n",
-    "moonlanderSpecs == moonlanderSpecsCopy"
+    "\n",
+    "moonlanderSpecsCopy[1]"
    ]
   },
   {
