--- a/notebooks/variables/dictionaries.ipynb
+++ b/notebooks/variables/dictionaries.ipynb
@@ -282,27 +282,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "76955594-1a07-4e1a-abff-e77b717a8cf0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "1",
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'index'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmoonlanderSpecsCopy\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 1"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmoonlanderSpecs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m(Apollo)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'index'"
      ]
     }
    ],
-   "source": [
-    "\n",
-    "\n",
-    "moonlanderSpecsCopy[1]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
