--- a/notebooks/variables/sets.ipynb
+++ b/notebooks/variables/sets.ipynb
@@ -42,10 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "b5ca0430-4eb8-4eeb-a899-151ebbbf7f13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Voyager', 'Pioneer'}\n"
+     ]
+    }
+   ],
    "source": [
     "spaceCrafts = set()\n",
     "counter = 0\n",
@@ -63,10 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "id": "e8e00fbb-0a04-4754-9fdc-0ea3bc54f43e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Voyager', 'Pioneer'}\n"
+     ]
+    }
+   ],
    "source": [
     "spaceCrafts = set()\n",
     "counter = 0\n",
@@ -86,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 123,
    "id": "e51fcac8-8062-4c48-bc39-d191f7742c65",
    "metadata": {},
    "outputs": [
@@ -94,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Voyager', 'Pioneer', 'TOEVOEGING'}\n"
+      "{'TOEVOEGING', 'Voyager', 'Pioneer'}\n"
      ]
     }
    ],
@@ -118,10 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "065d6065-9d59-47f3-ba49-0c6cd4dd15f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377]\n"
+     ]
+    }
+   ],
    "source": [
     "fibonacciList = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377]\n",
     "print(fibonacciList)"
@@ -146,10 +170,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "65a28c92-758e-49b9-b2b6-bd78e79e7642",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 34, 5, 8, 233, 377, 13, 144, 21, 55, 89]\n"
+     ]
+    }
+   ],
    "source": [
     "#oplidding 1\n",
     "\n",
@@ -161,10 +193,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "002a0381-e20c-443d-8c13-30343046241b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 34, 5, 8, 233, 377, 13, 144, 21, 55, 89}\n"
+     ]
+    }
+   ],
    "source": [
     "#oplossing 2\n",
     "\n",
@@ -186,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "46e0e7e4-1cc9-47f3-bc53-d3888252e583",
    "metadata": {},
    "outputs": [],
@@ -207,10 +247,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "96daa91c-96a8-41a7-b202-6e4a77876ef0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Luxembourg', 'Belgium', 'The Netherlands'}\n"
+     ]
+    }
+   ],
    "source": [
     "benelux = {\"Belgium\", \"The Netherlands\", \"Luxembourg\"}\n",
     "print(benelux)"
@@ -239,10 +287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "53417987-3497-4658-a6e1-02d9370b966a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BelgiumLuxembourgThe Netherlands\n"
+     ]
+    }
+   ],
    "source": [
     "#Oplossing opzet 1\n",
     "\n",
@@ -256,42 +312,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "732f6453-5268-4397-a17c-09fad1e69a83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Be\n",
+      "Ne\n",
+      "The\n"
+     ]
+    }
+   ],
    "source": [
     "#Oplossing opzet 2\n",
     "\n",
-    "benelux = {\"Belgium\", \"The Netherlands\", \"Luxembourg\"}\n",
-    "benelux = list(benelux)\n",
-    "benelux.sort()\n",
-    "benelux[2] = benelux[1]\n",
-    "benelux[1] = 'Netherlands'\n",
-    "BeNeLux = ''.join(map(str,benelux))\n",
-    "print(BeNeLux[0:2])\n",
-    "print(BeNeLux[7:9])\n",
-    "print(BeNeLux[18:21])"
+    "benelux_1 = {\"Belgium\", \"The Netherlands\", \"Luxembourg\"}\n",
+    "benelux_1 = list(benelux_1)\n",
+    "benelux_1.sort()\n",
+    "benelux_1[1] = benelux[2]\n",
+    "benelux_1[1] = 'Netherlands'\n",
+    "BeNeLux_1 = ''.join(map(str,benelux_1))\n",
+    "print(BeNeLux_1[0:2])\n",
+    "print(BeNeLux_1[7:9])\n",
+    "print(BeNeLux_1[18:21])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "973d0f51-c9f9-4335-883c-c1977ae839cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BelgiumLuxembourgThe Netherlands\n"
+     ]
+    }
+   ],
    "source": [
-    "#Oplossing 3\n",
+    "#Oplossing DEF\n",
     "\n",
     "\n",
-    "benelux = {\"Belgium\", \"The Netherlands\", \"Luxembourg\"}\n",
-    "benelux = list(benelux)\n",
-    "benelux.sort()\n",
-    "benelux[2] = benelux[1]\n",
-    "benelux[1] = \"Ne\"\n",
-    "benelux[0] = \"Be\"\n",
-    "benelux[2] = \"Lux\"\n",
-    "BeNeLux = ''.join(map(str,benelux))\n",
+    "benelux_2 = {\"Belgium\", \"The Netherlands\", \"Luxembourg\"}\n",
+    "benelux_2 = list(benelux_2)\n",
+    "benelux_2.sort()\n",
+    "benelux_2[2] = benelux_2[1]\n",
+    "benelux_2[1] = \"Ne\"\n",
+    "benelux_2[0] = \"Be\"\n",
+    "benelux_2[2] = \"Lux\"\n",
+    "BeNeLux_2 = ''.join(map(str,benelux_2))\n",
     "print(BeNeLux)"
    ]
   },
@@ -323,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "a0d796dc-7580-4937-a2cc-09d5b5c4e432",
    "metadata": {},
    "outputs": [],
@@ -350,16 +424,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "id": "1a90d4ce-5d4b-45eb-becb-9a041ee81510",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "All arguments must be of the same type",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/JeroenArians/MakeAIWork/notebooks/variables/sets.ipynb Cell 31\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/JeroenArians/MakeAIWork/notebooks/variables/sets.ipynb#X42sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib_venn\u001b[39;00m \u001b[39mimport\u001b[39;00m venn2, venn3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/JeroenArians/MakeAIWork/notebooks/variables/sets.ipynb#X42sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m \u001b[39mimport\u001b[39;00m pyplot \u001b[39mas\u001b[39;00m plt\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/JeroenArians/MakeAIWork/notebooks/variables/sets.ipynb#X42sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m venn3([benelux, nordics, baltics], (\u001b[39m'\u001b[39;49m\u001b[39mBenelux\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mNordics\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mBaltics\u001b[39;49m\u001b[39m'\u001b[39;49m))\n",
+      "File \u001b[0;32m~/MakeAIWork/env/lib/python3.8/site-packages/matplotlib_venn/_venn3.py:345\u001b[0m, in \u001b[0;36mvenn3\u001b[0;34m(subsets, set_labels, set_colors, alpha, normalize_to, ax, subset_label_formatter)\u001b[0m\n\u001b[1;32m    343\u001b[0m     subsets \u001b[39m=\u001b[39m [subsets\u001b[39m.\u001b[39mget(t, \u001b[39m0\u001b[39m) \u001b[39mfor\u001b[39;00m t \u001b[39min\u001b[39;00m [\u001b[39m'\u001b[39m\u001b[39m100\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m010\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m110\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m001\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m101\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m011\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m111\u001b[39m\u001b[39m'\u001b[39m]]\n\u001b[1;32m    344\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mlen\u001b[39m(subsets) \u001b[39m==\u001b[39m \u001b[39m3\u001b[39m:\n\u001b[0;32m--> 345\u001b[0m     subsets \u001b[39m=\u001b[39m compute_venn3_subsets(\u001b[39m*\u001b[39;49msubsets)\n\u001b[1;32m    347\u001b[0m \u001b[39mif\u001b[39;00m subset_label_formatter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    348\u001b[0m     subset_label_formatter \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m\n",
+      "File \u001b[0;32m~/MakeAIWork/env/lib/python3.8/site-packages/matplotlib_venn/_venn3.py:257\u001b[0m, in \u001b[0;36mcompute_venn3_subsets\u001b[0;34m(a, b, c)\u001b[0m\n\u001b[1;32m    220\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    221\u001b[0m \u001b[39mGiven three set or Counter objects, computes the sizes of (a & ~b & ~c, ~a & b & ~c, a & b & ~c, ....),\u001b[39;00m\n\u001b[1;32m    222\u001b[0m \u001b[39mas needed by the subsets parameter of venn3 and venn3_circles.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    254\u001b[0m \u001b[39mValueError: All arguments must be of the same type\u001b[39;00m\n\u001b[1;32m    255\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    256\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mtype\u001b[39m(a) \u001b[39m==\u001b[39m \u001b[39mtype\u001b[39m(b) \u001b[39m==\u001b[39m \u001b[39mtype\u001b[39m(c)):\n\u001b[0;32m--> 257\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mAll arguments must be of the same type\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    258\u001b[0m set_size \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m \u001b[39mif\u001b[39;00m \u001b[39mtype\u001b[39m(a) \u001b[39m!=\u001b[39m Counter \u001b[39melse\u001b[39;00m \u001b[39mlambda\u001b[39;00m x: \u001b[39msum\u001b[39m(x\u001b[39m.\u001b[39mvalues())   \u001b[39m# We cannot use len to compute the cardinality of a Counter\u001b[39;00m\n\u001b[1;32m    259\u001b[0m \u001b[39mreturn\u001b[39;00m (set_size(a \u001b[39m-\u001b[39m (b \u001b[39m|\u001b[39m c)),  \u001b[39m# TODO: This is certainly not the most efficient way to compute.\u001b[39;00m\n\u001b[1;32m    260\u001b[0m     set_size(b \u001b[39m-\u001b[39m (a \u001b[39m|\u001b[39m c)),\n\u001b[1;32m    261\u001b[0m     set_size((a \u001b[39m&\u001b[39m b) \u001b[39m-\u001b[39m c),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    264\u001b[0m     set_size((b \u001b[39m&\u001b[39m c) \u001b[39m-\u001b[39m a),\n\u001b[1;32m    265\u001b[0m     set_size(a \u001b[39m&\u001b[39m b \u001b[39m&\u001b[39m c))\n",
+      "\u001b[0;31mValueError\u001b[0m: All arguments must be of the same type"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib_venn import venn2, venn3\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "venn3([benelux, nordics, baltics], ('Benelux', 'Nordics', 'Baltics'))\n",
-    "plt.show()"
+    "venn3([benelux, nordics, baltics], ('Benelux', 'Nordics', 'Baltics'))"
    ]
   },
   {
@@ -390,10 +477,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "4f803d2e-f0cc-43bf-a5b9-f282adb27811",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'union'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/JeroenArians/MakeAIWork/notebooks/variables/sets.ipynb Cell 35\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/JeroenArians/MakeAIWork/notebooks/variables/sets.ipynb#X46sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m subUnion \u001b[39m=\u001b[39m benelux\u001b[39m.\u001b[39;49munion(nordics)\u001b[39m.\u001b[39munion(baltics)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/JeroenArians/MakeAIWork/notebooks/variables/sets.ipynb#X46sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m venn2([benelux, subUnion], (\u001b[39m'\u001b[39m\u001b[39mBenelux\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mBenelux, Nordics and Baltics\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/JeroenArians/MakeAIWork/notebooks/variables/sets.ipynb#X46sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m plt\u001b[39m.\u001b[39mshow()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'union'"
+     ]
+    }
+   ],
    "source": [
     "subUnion = benelux.union(nordics).union(baltics)\n",
     "venn2([benelux, subUnion], ('Benelux', 'Benelux, Nordics and Baltics'))\n",
@@ -477,7 +576,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.9 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -493,7 +592,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.9"
   },
-  "toc-autonumbering": false
+  "toc-autonumbering": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "db3e042390c8d3382d7733689e2ca9d3b131f9b76efb1c210d3bc94e385be943"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
