--- a/notebooks/variables/dictionaries.ipynb
+++ b/notebooks/variables/dictionaries.ipynb
@@ -50,21 +50,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0dabdb25-6ff5-4edc-96fd-7019734055e0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_items([('length', 6), ('width', 1.56), ('weight', 360), ('deckHeight', (83, 108)), ('robotArmLength', 1.8), ('numberOfSolarPanels', 2)])"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "marslanderSpecs = { 'length': 6, 'width': 1.56, 'weight': 360, 'deckHeight': (83, 108), 'robotArmLength': 1.8, 'numberOfSolarPanels': 2}\n",
     "marslanderSpecs.items()"
@@ -80,19 +69,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9fc3a9ee-6b10-41e0-9d45-6d4b85940f7f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'tuple'>\n",
-      "The Deck Height of the Marslander has a range from 83 to 108\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(type(marslanderSpecs.get('deckHeight')))\n",
     "print( 'The Deck Height of the Marslander has a range from %s to %s' %marslanderSpecs.get('deckHeight'))"
@@ -108,18 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "321b9ef8-559f-4f09-8110-0d07f6091807",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'length': 6, 'width': 1.56, 'weight': 360, 'deckHeight': (83, 108), 'robotArmLength': 1.8, 'numberOfSolarPanels': 2, 'scienceInstruments': ('seismometer', 'heat probe', 'radio science experiment'), 'image': '../pics/nasa.mars.jpg'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "marslanderSpecs.update( {'scienceInstruments' : (\"seismometer\", \"heat probe\", \"radio science experiment\")} )\n",
@@ -129,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "28d7ab99-2af2-4700-b659-4d198a897f04",
    "metadata": {},
    "outputs": [],
@@ -151,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "d24b0856-abd1-4962-a8af-e9a68094f181",
    "metadata": {},
    "outputs": [],
@@ -206,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "3756229c-0b16-43b6-a495-c8bce87ff708",
    "metadata": {},
    "outputs": [],
@@ -224,18 +196,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "7fead617-0c2b-47f0-b535-084cde28ef54",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('scienceInstruments', ('seismometer', 'heat probe', 'radio science experiment'))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lastItem = marslanderSpecsCopy.popitem()\n",
     "print(lastItem) "
@@ -252,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b78f2633-5fcd-46ab-a3a0-bcefb541d7e1",
    "metadata": {},
    "outputs": [],
@@ -282,28 +246,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "76955594-1a07-4e1a-abff-e77b717a8cf0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'Apollo Lunar Module', 'length': 7.04, 'width': 9.4, 'height': 9.6}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "moonlanderSpecs = { 'name': \"Apollo Lunar Module\", 'length': 7.04, 'width': 9.4 }\n",
     "moonlanderSpecsCopy = moonlanderSpecs\n",
@@ -332,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c1c7a3e1-2814-4d53-ae6f-51b6e9ab34fd",
    "metadata": {},
    "outputs": [],
@@ -342,29 +288,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "913b1435-3083-4d25-8d26-5ae6b4c10d10",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'marslanderSpecs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [33]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m img \u001b[38;5;241m=\u001b[39m Image\u001b[38;5;241m.\u001b[39mopen( \u001b[43mmarslanderSpecs\u001b[49m\u001b[38;5;241m.\u001b[39mcsv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage\u001b[39m\u001b[38;5;124m'\u001b[39m) )\n\u001b[1;32m      2\u001b[0m percentage \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.5\u001b[39m\n\u001b[1;32m      3\u001b[0m width, height \u001b[38;5;241m=\u001b[39m img\u001b[38;5;241m.\u001b[39msize\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'marslanderSpecs' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "marslanderSpecs = { 'length': 6, 'width': 1.56, 'weight': 360, 'deckHeight': (83, 108), 'robotArmLength': 1.8, 'numberOfSolarPanels': 2}\n",
+    "marslanderSpecs.items()\n",
+    "marslanderSpecs.update( {'image': \"/Users/JeroenArians/MakeAIWork/notebooks/pics/mars.nasa.jpg\"} )\n",
     "img = Image.open( marslanderSpecs.get('image') )\n",
-    "percentage = 0.5\n",
+    "percentage = 1.1\n",
     "width, height = img.size\n",
     "resizedDimensions = (int(width * percentage), int(height * percentage))\n",
     "resizedImg = img.resize(resizedDimensions)\n",
-    "resizedImg.show()"
+    "resizedImg.show()\n"
    ]
   },
   {
@@ -402,7 +339,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Oplossing"
+    "# Oplossing\n",
+    "\n",
+    "for itemMars in marslanderSpecs.items():\n",
+    "    print(itemMars)"
    ]
   },
   {
