--- a/notebooks/Les machine learning/huisprijs-student.ipynb
+++ b/notebooks/Les machine learning/huisprijs-student.ipynb
@@ -755,7 +755,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 ('env': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
