--- a/notebooks/variables/dictionaries.ipynb
+++ b/notebooks/variables/dictionaries.ipynb
@@ -50,21 +50,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0dabdb25-6ff5-4edc-96fd-7019734055e0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_items([('length', 6), ('width', 1.56), ('weight', 360), ('deckHeight', (83, 108)), ('robotArmLength', 1.8), ('numberOfSolarPanels', 2)])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "marslanderSpecs = { 'length': 6, 'width': 1.56, 'weight': 360, 'deckHeight': (83, 108), 'robotArmLength': 1.8, 'numberOfSolarPanels': 2}\n",
     "marslanderSpecs.items()"
@@ -80,19 +69,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9fc3a9ee-6b10-41e0-9d45-6d4b85940f7f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'tuple'>\n",
-      "The Deck Height of the Marslander has a range from 83 to 108\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(type(marslanderSpecs.get('deckHeight')))\n",
     "print( 'The Deck Height of the Marslander has a range from %s to %s' %marslanderSpecs.get('deckHeight'))"
@@ -108,18 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "321b9ef8-559f-4f09-8110-0d07f6091807",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'length': 6, 'width': 1.56, 'weight': 360, 'deckHeight': (83, 108), 'robotArmLength': 1.8, 'numberOfSolarPanels': 2, 'scienceInstruments': ('seismometer', 'heat probe', 'radio science experiment'), 'image': '../pics/mars.nasa.jpg'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "marslanderSpecs.update( {'scienceInstruments' : (\"seismometer\", \"heat probe\", \"radio science experiment\")} )\n",
@@ -129,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "28d7ab99-2af2-4700-b659-4d198a897f04",
    "metadata": {},
    "outputs": [],
@@ -151,22 +123,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d24b0856-abd1-4962-a8af-e9a68094f181",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcsv\u001b[39;00m\n\u001b[1;32m      5\u001b[0m marslanderSpecs \u001b[38;5;241m=\u001b[39m { \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlength\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m6\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwidth\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1.56\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweight\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m360\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdeckHeight\u001b[39m\u001b[38;5;124m'\u001b[39m: (\u001b[38;5;241m83\u001b[39m, \u001b[38;5;241m108\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrobotArmLength\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m1.8\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnumberOfSolarPanels\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m2\u001b[39m}\n\u001b[0;32m----> 7\u001b[0m marslanderSpecs_header_1 \u001b[38;5;241m=\u001b[39m (\u001b[43mdata\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlength\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwidth\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweight\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdeckHeight\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrobotArmLength\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnumberOfSolarPanels\u001b[39m\u001b[38;5;124m'\u001b[39m ])\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmarslanderSpecs_1.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUTF8\u001b[39m\u001b[38;5;124m'\u001b[39m, newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     11\u001b[0m     writer \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mDictWriter(f, fieldnames\u001b[38;5;241m=\u001b[39mmarslanderSpecs_header_1)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Oplossing opzet 2\n",
     "\n",
@@ -182,6 +142,25 @@
     "    writer.writeheader()\n",
     "    writer.writerow(marslanderSpecs)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d606411c-8765-4990-8f3d-0c125ea9db79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "marslanderSpecs = { 'length': 6, 'width': 1.56, 'weight': 360, 'deckHeight': (83, 108), 'robotArmLength': 1.8, 'numberOfSolarPanels': 2}\n",
+    "marslanderSpecs.items()\n",
+    "marslanderSpecs.update( {'image': \"../pics/mars.nasa.jpg\"} )\n",
+    "marslanderSpecs.update( {'scienceInstruments' : (\"seismometer\", \"heat probe\", \"radio science experiment\")} )\n",
+    "\n",
+    "df = pd.DataFrame({key:pd.Series(value) for key, value in marslanderSpecs.items()})\n",
+    "df.to_csv(\"csv/marslander.csv\")\n",
+    "pd.read_csv(\"csv/marslander.csv\")"
    ]
   },
   {
@@ -218,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3756229c-0b16-43b6-a495-c8bce87ff708",
    "metadata": {},
    "outputs": [],
@@ -236,18 +215,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7fead617-0c2b-47f0-b535-084cde28ef54",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('numberOfSolarPanels', 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lastItem = marslanderSpecsCopy.popitem()\n",
     "print(lastItem) "
@@ -264,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b78f2633-5fcd-46ab-a3a0-bcefb541d7e1",
    "metadata": {},
    "outputs": [],
@@ -294,28 +265,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "76955594-1a07-4e1a-abff-e77b717a8cf0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'Apollo Lunar Module', 'length': 7.04, 'width': 9.4, 'height': 9.6}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "moonlanderSpecs = { 'name': \"Apollo Lunar Module\", 'length': 7.04, 'width': 9.4 }\n",
     "moonlanderSpecsCopy = moonlanderSpecs\n",
@@ -344,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c1c7a3e1-2814-4d53-ae6f-51b6e9ab34fd",
    "metadata": {},
    "outputs": [],
@@ -354,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "913b1435-3083-4d25-8d26-5ae6b4c10d10",
    "metadata": {},
    "outputs": [],
@@ -380,24 +333,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "65af11f0-5de0-40c7-b075-8f930bc27801",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "length 6\n",
-      "width 1.56\n",
-      "weight 360\n",
-      "deckHeight (83, 108)\n",
-      "robotArmLength 1.8\n",
-      "numberOfSolarPanels 2\n",
-      "image /Users/JeroenArians/MakeAIWork/notebooks/pics/mars.nasa.jpg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for (key, value) in marslanderSpecs.items():\n",
     "    print(key, value)"
@@ -414,24 +353,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "68dc008a-32f0-4b7f-8f9e-fb179dee9e5f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('length', 6)\n",
-      "('width', 1.56)\n",
-      "('weight', 360)\n",
-      "('deckHeight', (83, 108))\n",
-      "('robotArmLength', 1.8)\n",
-      "('numberOfSolarPanels', 2)\n",
-      "('image', '/Users/JeroenArians/MakeAIWork/notebooks/pics/mars.nasa.jpg')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Oplossing\n",
     "\n",
